fix duplicate UTF-8 BOM